infra/kubernetes/network-policies/np.yaml
## Allow communication between ${FROM_SVC_NAME} to ${TO_SVC_NAME} in the port specified
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-${FROM_SVC_NAME}-${TO_SVC_NAME}
spec:
  podSelector:
    matchLabels:
      app: ${TO_SVC_NAME}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: ${PROJECT_NAME}
    - podSelector:
        matchLabels:
          app: ${FROM_SVC_NAME}
    ports:
    - protocol: TCP
      port: ${TO_SVC_PORT}

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: engress-${FROM_SVC_NAME}-${TO_SVC_NAME}
spec:
  podSelector:
    matchLabels:
      app: ${FROM_SVC_NAME}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          project: ${PROJECT_NAME}
    - podSelector:
        matchLabels:
          app: ${TO_SVC_NAME}
    ports:
    - protocol: TCP
      port: ${TO_SVC_PORT}
