infra/kubernetes/network-policies/payment.yaml
## Allow communication FROM payment service TO expenses service in the port specified
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-payment-to-expenses
spec:
  podSelector:
    matchLabels:
      app: expenses
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: ${PROJECT_NAME}
    - podSelector:
        matchLabels:
          app: payment
    ports:
    - protocol: TCP
      port: 8282

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: engress-payment-to-expenses
spec:
  podSelector:
    matchLabels:
      app: payment
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          project: ${PROJECT_NAME}
    - podSelector:
        matchLabels:
          app: expenses
    ports:
    - protocol: TCP
      port: 8282
